--- a/initial_cleaning.Rmd
+++ b/initial_cleaning.Rmd
@@ -1,7 +1,7 @@
 ---
 title: "MCCHD Covid-19 initial data cleaning"
 author: "Ethan Walker"
-date: "Started 2 April 2020, Updated 8 May 2020"
+date: "Started 2 April 2020, Updated 23 June 2020"
 output:
   pdf_document: default
   html_document:
@@ -30,7 +30,7 @@ input_path <- c("C:/Users/ethan.walker/Box/Missoula_COVID19EpiProfile_Working/")
 
 
 covid_data_initial <- 
-   read_xlsx(paste0(input_path, "COVID data 6.15.20.xlsx"), 
+   read_xlsx(paste0(input_path, "COVID data 6.22.20.xlsx"), 
              range = "C2:AA500", 
                         col_names = c("case_id", "age", "gender", "zipcode", "healthcare_worker",
                                       "symptoms", "symptom_type", "symptom_onset_date",
@@ -55,7 +55,7 @@ covid_data_initial <-
 
 ```{r}
 covid_clean <- covid_data_initial %>% 
-   filter(!is.na(age)) %>% 
+   filter(!is.na(gender)) %>% 
    mutate(age = as.numeric(age),
           age_group = cut(age, breaks = c(0, 10, 20, 30, 40, 50, 60, 70, 80, 110),
                           labels = c("0 to 9, 0.1", "10 to 19, 0.12", "20 to 29, 0.19", 
@@ -124,6 +124,7 @@ covid_clean <- covid_data_initial %>%
           ventilated = factor(ventilated,
                                      levels = c("y", "n", "n/a"),
                                      labels = c("Yes", "No", "N/A")),
+          chronic_conditions = if_else(!is.na(chronic_conditions_type), "y", "n"),
           chronic_conditions = factor(chronic_conditions, levels = c("y", "n"),
                              labels = c("Yes", "No")),
           community_spread = if_else(travel_hx == "No" & contact_with_case == "No",
