--- a/montana_covid_data.Rmd
+++ b/montana_covid_data.Rmd
@@ -1364,3 +1364,136 @@ plot(incidence_earlyR) %>%
 ggsave("state_projections_phase1.png")
 ```
 
+# Estimate serial interval using MT data
+```{r}
+# Look at mock data for example of formatting
+data("MockRotavirus")
+MockRotavirus$si_data
+
+# Load and format MT SI data
+file_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
+
+mt_si_data <- read_csv(paste0(file_path, "Input/si_data.csv")) %>% 
+   select(-Pair_No) %>% 
+   rename(EL = EL_Infector_Lower,
+          ER = ER_Infector_Upper,
+          SL = SL_Infected_Lower,
+          SR = SR_Infected_Upper) %>% 
+   mutate_all(as.integer) %>% 
+   mutate(type = 0) %>% 
+   filter(SR > 0) %>% 
+   filter(SL > 0)
+
+# Load data with import/local incidence
+mt_li_data <- read_csv(paste0(file_path, "Input/local_import_data.csv")) %>% 
+   filter(!is.na(`Date Reported to CDEpi`)) %>% 
+   mutate(local = if_else(Local_Import == 0, 1, 0),
+          imported = Local_Import,
+          dates = mdy(`Date Reported to CDEpi`)) %>% 
+   group_by(dates) %>% 
+   mutate(local = sum(local),
+          imported = sum(imported)) %>% 
+   select(dates, local, imported) %>% 
+   distinct(dates, .keep_all = TRUE)
+
+## State incidence data
+date_today <- Sys.Date()
+state_incidence <- incidence(state_data_clean$dates, last_date = date_today)
+
+# Merge local/import data with state incidence data to get all dates in the range
+mt_li_data_final <- as.data.frame(state_incidence$dates) %>% 
+   mutate(dates = ymd(state_incidence$dates)) %>% 
+   select(dates) %>% 
+   left_join(mt_li_data, by = "dates") %>% 
+   mutate(local = if_else(is.na(local), 0, local),
+          imported = if_else(is.na(imported), 0, imported)) 
+
+
+state_n <- as.data.frame(state_incidence$dates)
+
+time_var <- nrow(state_n)
+time_start <- seq(2, time_var-13)
+time_end <- time_start + 13
+
+
+
+MCMC_seed <- 1
+overall_seed <- 2
+mcmc_control <- make_mcmc_control(seed = MCMC_seed, burnin = 1000, thin = 10)
+dist <- "G"  # fitting a Gamma distribution for the SI
+si_config <- make_config(list(si_parametric_distr = dist, 
+    mcmc_control = mcmc_control, seed = overall_seed, n1 = 500, n2 = 50,
+    t_start = time_start, t_end = time_end))
+
+r_mt_si <- estimate_R(mt_li_data_final, method = "si_from_data", 
+    si_data = mt_si_data, config = si_config)
+
+estimate_plots <- estimate_R_plots(r_mt_si, what = "R")
+estimate_plots
+
+mt_mean_si <- r_mt_si$SI.Moments %>% 
+   summarize(mean_si = mean(Mean), sd_si = mean(Std)) 
+mt_mean_si
+
+r_mt_si$si_distr
+
+
+colomns <- c(1:4, 8)
+state_r <- (r_mt_si$R[,colomns]) %>% 
+   mutate(region = "state") %>% 
+   rename(mean_r = `Mean(R)`,
+          sd_r = `Std(R)`,
+          median_r = `Median(R)`)
+
+state_dates <- as.data.frame(r_mt_si$dates)
+state_i <- as.data.frame(r_mt_si$I)
+state_cil <- as.data.frame(r_mt_si$R$`Quantile.0.025(R)`)
+state_cih <- as.data.frame(r_mt_si$R$`Quantile.0.975(R)`)
+state_dates_new <- cbind(state_dates, state_i) %>% 
+   rename(dates = 1,
+          incidence = 2) %>% 
+   mutate(dates = ymd(dates))
+state_dates_new <- state_dates_new[-(1:14), 1:2]
+state_dates_new <- cbind(state_dates_new, state_cil, state_cih) %>% 
+   rename(cl_low = 3,
+          cl_high = 4)
+state_r_clean <- cbind(state_r, state_dates_new) %>% 
+   filter(t_end < 106)
+
+
+state_r_plot <- state_r_clean %>% 
+   ggplot() +
+     geom_line(aes(dates, mean_r), size = 1.5, color = "black") +
+     geom_line(aes(dates, cl_low), size = 1.5, color = "grey") +
+     geom_line(aes(dates, cl_high), size = 1.5, color = "grey") +
+     labs(title = "COVID-19 Rolling 14-day R-values, State of Montana, 2020",
+          subtitle = paste0("Data current as of ", date_today),
+          color = "") +
+     ylab("R-value") +
+     xlab("") +
+     geom_hline(yintercept = 1, color = "black", size = 1.2) +
+     scale_x_date(date_breaks = "2 days", date_labels = "%d-%b") +
+     #scale_y_continuous(breaks = seq(0, 5, 0.25), labels = seq(0, 5, 0.25)) +
+     theme_minimal() +
+     theme(strip.text = element_text(size = 16, colour = "black"),
+           title = element_text(size = 12, colour = "black"),
+           panel.grid = element_blank(),
+           panel.grid.major.y = element_line(colour = "grey"),
+           axis.text.x = element_text(size = 12, colour = "black", 
+                                     angle = 90, vjust = 0.4),
+           axis.text.y = element_text(size = 12, colour = "black"),
+           legend.text = element_text(size = 12, colour = "black"),
+           axis.title.y = element_text(size = 12, colour = "black",
+                                       margin = unit(c(0, 5, 0, 0), "mm")),
+           axis.title.x = element_text(size = 12, colour = "black",
+                                       margin = unit(c(5, 0, 0, 0), "mm")),
+           axis.line.x = element_blank(), 
+           axis.line.y = element_blank(), 
+           axis.ticks = element_blank()) +
+     scale_color_manual(values = c("black")) 
+state_r_plot
+
+
+ggsave("mt_r_si_li.png")
+```
+
