--- a/MCCHD_covid_all_figures.Rmd
+++ b/MCCHD_covid_all_figures.Rmd
@@ -5,13 +5,12 @@ date: "Data as of June 29, 2020"
 output: pdf_document
 header-includes:
     - \usepackage[labelformat=empty, font={Large, bf}]{caption}
-    
 ---
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = FALSE, eval = TRUE, 
                       include = TRUE, warning = FALSE, message = FALSE,
-                      fig.width = 10, fig.height = 6)
+                      fig.height = 7, fig.width = 10)
 ```
 
 ```{r, message=FALSE}
@@ -29,8 +28,6 @@ library(ggthemes)
 library(incidence)
 library(knitr)
 library(kableExtra)
-library(magick)
-library(webshot)
 jv_palette <- c("#330099","#CC0066","#FF6633", 
                  "#0099CC", "#FF9900","#CC6633",
                   "#FF3366", "#33CC99", "#33999")
@@ -41,15 +38,114 @@ cbPalette <- c("#E69F00", "#56B4E9", "#009E73", "#F0E442",
 
 ```{r}
 # Load data
-file_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
+output_path <- c("C:/Users/ethan.walker/Box/Ethan Walker UM/R/covid19/")
 
-covid_data <- read_rds(paste0(file_path, "Output/covid_data_clean.rds"))
+covid_data <- read_rds(paste0(output_path, "Output/covid_data_clean.rds"))
+state_data <- read_rds(paste0(output_path, "Output/state_data_clean.rds")) %>% 
+   select(-age_group) %>% 
+   rename(age_group = age_group_new)
+
+us_pop_data <- as.data.frame(c("0 to 9, 0.12", "10 to 19, 0.13", "20 to 29, 0.14", 
+                 "30 to 39, 0.13", "40 to 49, 0.12", "50 to 59, 0.13", 
+                 "60 to 69, 0.12", "70 to 79, 0.07", "80+, 0.04")) %>% 
+   rename(age_group = 1) %>% 
+   separate(age_group, c("age_group", "age_group_percent_us"), sep = ", ") %>% 
+   mutate(age_group_percent_us = as.numeric(age_group_percent_us),
+          us_pop = as.numeric(327167000))
 ```
 
 
-```{r}
-# Incidence table
+```{r, include=FALSE}
+county_joined <- covid_data %>%  
+   select(case, age_group, age_group_percent, county_pop) %>% 
+   rename(region_pop = county_pop) %>% 
+   left_join(us_pop_data, by = "age_group") %>% 
+   mutate(total_cases = n()) %>% 
+   group_by(age_group) %>% 
+   mutate(group_cases = n(),
+          group_prop = group_cases/total_cases*100,
+          group_pop = age_group_percent*region_pop,
+          us_group_pop = age_group_percent_us*us_pop,
+          group_inc = group_cases/group_pop*100000,
+          stand_inc_group = group_inc*us_group_pop/100000) %>% 
+   ungroup() %>% 
+   distinct(age_group, .keep_all = TRUE) %>% 
+   mutate(region = "Missoula County",
+          stand_inc_sum = sum(stand_inc_group),
+          stand_inc = stand_inc_sum/us_pop*100000) %>% 
+   select(region, age_group, group_cases, group_prop, group_inc, 
+          stand_inc, stand_inc_sum, stand_inc_group, region_pop, age_group_percent) %>% 
+   arrange(age_group)
+   
 
+
+state_joined <- state_data %>% 
+   select(case, age_group, age_group_new_percent, state_pop) %>% 
+   rename(region_pop = state_pop,
+          age_group_percent = age_group_new_percent) %>% 
+   left_join(us_pop_data, by = "age_group") %>% 
+   mutate(total_cases = n()) %>% 
+   group_by(age_group) %>% 
+   mutate(group_cases = n(),
+          group_prop = group_cases/total_cases*100,
+          group_pop = age_group_percent*region_pop,
+          us_group_pop = age_group_percent_us*us_pop,
+          group_inc = group_cases/group_pop*100000,
+          stand_inc_group = group_inc*us_group_pop/100000) %>% 
+   ungroup() %>% 
+   distinct(age_group, .keep_all = TRUE) %>% 
+   mutate(region = "Montana",
+          stand_inc_sum = sum(stand_inc_group),
+          stand_inc = stand_inc_sum/us_pop*100000) %>% 
+   select(region, age_group, group_cases, group_prop, group_inc, 
+          stand_inc, stand_inc_sum, stand_inc_group, region_pop, age_group_percent) %>% 
+   arrange(age_group)
+
+
+county_state_joined <- rbind(county_joined, state_joined)
+
+stand_inc <- county_state_joined %>% 
+   distinct(region, .keep_all = TRUE) %>% 
+   select(region, stand_inc) %>% 
+   rename(Region = region,
+          "Incidence per 100,000 Population" = stand_inc)
+```
+
+
+```{r, fig.width = 12, fig.height = 6}
+covid_incidence <- county_state_joined %>%  
+   ggplot() +
+     geom_col(aes(age_group, group_inc, fill = region), position = "dodge") +
+     labs(title = "COVID-19 Incidence in Missoula County by Age Group",
+          fill = "") +
+     ylab("Incidence per 100,000 Population") +
+     xlab("Age Group (years)") +
+     theme_minimal() +
+     theme(strip.text = element_text(size = 16, colour = "black"),
+           title = element_text(size = 12, colour = "black"),
+           panel.grid = element_blank(),
+           panel.grid.major.y = element_line(colour = "grey"),
+           axis.text.x = element_text(size = 12, colour = "black", 
+                                      vjust = 0.4, angle = 20),
+           axis.text.y = element_text(size = 12, colour = "black"),
+           legend.text = element_text(size = 12, colour = "black"),
+           axis.title.y = element_text(size = 12, colour = "black",
+                                       margin = unit(c(0, 5, 0, 0), "mm")),
+           axis.title.x = element_text(size = 12, colour = "black",
+                                       margin = unit(c(5, 0, 0, 0), "mm")),
+           axis.line.x = element_blank(), 
+           axis.line.y = element_blank(), 
+           axis.ticks = element_blank()) +
+     scale_fill_manual(values = cbPalette) 
+
+covid_incidence
+
+#ggsave("miss_vs_mt_inc.jpg", width = 10, height = 5)
+```
+
+\pagebreak  
+
+```{r}
 overall_summary <- covid_data %>% 
    mutate(total_cases = n()) %>% 
    summarize("Number of Cases" = n()) %>% 
@@ -130,6 +226,12 @@ covid_summary <- rbind(overall_summary, age_group_summary, gender_summary,
           "Proportion of Cases (%)", "Incidence per 100,000 Population")
 
 
+#kable(stand_inc, digits = 1,
+#      caption = "Age-standardized Incidence") %>% 
+#   kable_styling() %>% 
+#   footnote(c("Standardized to US population age distribution"))
+
+
 kable(covid_summary, caption = "Missoula County COVID-19 Cases",
       format = "latex", align = "c") %>% 
    kable_styling(font_size = 10) %>% 
@@ -144,64 +246,123 @@ kable(covid_summary, caption = "Missoula County COVID-19 Cases",
      "Community Spread: no history of travel and no known contact with a known case."))
 ```
 
-\clearpage
+\clearpage  
 
-```{r}
-# Incidence data
-county_incidence <- covid_data %>% 
-   select(case, age_group, age_group_percent, county_pop) %>% 
-   mutate(total_cases = n()) %>% 
-   group_by(age_group) %>% 
-   mutate(group_cases = n(),
-          group_prop = group_cases/total_cases*100,
-          group_pop = age_group_percent*county_pop,
-          group_inc = group_cases/group_pop*100000) %>% 
-   ungroup() %>% 
-   distinct(age_group, .keep_all = TRUE) %>% 
-   mutate(region = "Missoula County") %>% 
-   select(region, age_group, group_cases, group_prop, group_inc, 
-          county_pop, age_group_percent) %>% 
-   filter(!is.na(age_group)) %>% 
-   arrange(age_group)
+```{r, eval=TRUE, include=FALSE}
+current_date <- format(Sys.Date(), "%Y-%m-%d")
+
+covid_incidence <- incidence(covid_data$symptom_onset_date_new, last_date = current_date)
+
+serial_interval_mean <- 4
+serial_interval_sd <- 4.75
+
+r_results <- get_R(covid_incidence, 
+                   si_mean = serial_interval_mean,
+                   si_sd = serial_interval_sd)
+#r_results
+
+fit_results <- incidence::fit(covid_incidence)
+
+#doubling_time <- round(fit_results$info$doubling)
+
+county_n <- as.data.frame(covid_incidence$dates)
+time_var <- nrow(county_n)
+time_start <- seq(2, time_var-13)
+time_end <- time_start + 13
+
+estimate_results <- estimate_R(covid_incidence, method="parametric_si", 
+                               config = make_config(list(mean_si = serial_interval_mean, 
+                                                         std_si = serial_interval_sd,
+                                                      t_start =  time_start,
+                                                      t_end = time_end)))
+
+colomns <- c(1:4, 8)
+county_r <- (estimate_results$R[,colomns]) %>% 
+   mutate(label = "7-day R-value") %>% 
+   rename(mean_r = `Mean(R)`,
+          sd_r = `Std(R)`,
+          median_r = `Median(R)`)
+
+county_dates <- as.data.frame(estimate_results$dates)
+county_i <- as.data.frame(estimate_results$I)
+county_cil <- as.data.frame(estimate_results$R$`Quantile.0.025(R)`)
+county_cih <- as.data.frame(estimate_results$R$`Quantile.0.975(R)`)
+county_dates_new <- cbind(county_dates, county_i) %>% 
+   rename(dates = 1,
+          incidence = 2) %>% 
+   mutate(dates = ymd(dates))
+county_dates_new <- county_dates_new[-(1:14), 1:2]
+county_dates_new <- cbind(county_dates_new, county_cil, county_cih) %>% 
+   rename(cl_low = 3,
+          cl_high = 4)
+county_r_clean <- cbind(county_r, county_dates_new)
+   
+
+estimate_plots <- estimate_R_plots(estimate_results, what = "R")
+estimate_plots
+
+par(mar=c(4.5,4.5,6,2))
+plot(r_results)
+#title(main = paste0("Current R and doubling time for Missoula County:
+#We consider this data unreliable due to the small sample size;
+#      please interpret with caution!", "\n", 
+#" Doubling time = ", doubling_time, " days."))
 ```
 
 \pagebreak  
 
-```{r, fig.width = 8, fig.height = 6}
-# Incidence plot by age
-covid_incidence <- county_incidence %>% 
-   filter(region == "Missoula County") %>% 
+```{r, fig.width = 10, fig.height = 6, include=FALSE}
+total_cases <- sum(covid_data$case)
+date_today <- format(Sys.Date(), "%d %b %Y")
+date_12 <- format(Sys.Date() - 12, "%d %b %Y")
+
+covid_plot_r <- county_r_clean %>% 
    ggplot() +
-     geom_col(aes(age_group, group_inc), fill = "steelblue") +
-     labs(title = "COVID-19 Incidence in Missoula County by Age Group",
-          fill = "") +
-     ylab("Incidence per 100,000 Population") +
-     xlab("Age Group (years)") +
+     geom_line(aes(dates, mean_r), size = 1.5, color = "black") +
+     geom_line(aes(dates, cl_low), size = 1.5, color = "grey") +
+     geom_line(aes(dates, cl_high), size = 1.5, color = "grey") +
+     geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
+               fill = "gray85", alpha = 0.05) +
+     geom_label(aes(x = Sys.Date()-7, y = 15, 
+                    label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
+     labs(title = "COVID-19 R-value in Missoula County, 2020",
+          subtitle = paste0("Total cases = ", total_cases)) +
+     ylab("Rolling 14-day mean R-value") +
+     xlab(" ") +
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  labels = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "1 day"),
+                  date_labels = "%d-%b") +
+     #scale_y_continuous(breaks = seq(0, 5, 0.25), labels = seq(0, 5, 0.25)) +
+     geom_hline(yintercept = 1, size = 1.2, color = "black") +
      theme_minimal() +
-     theme(title = element_text(size = 16, colour = "black"),
+     theme(strip.text = element_text(size = 16, colour = "black"),
+           title = element_text(size = 12, colour = "black"),
            panel.grid = element_blank(),
            panel.grid.major.y = element_line(colour = "grey"),
-           axis.text.x = element_text(size = 14, colour = "black", 
-                                      vjust = 0.4, angle = 15),
-           axis.text.y = element_text(size = 14, colour = "black"),
-           axis.title.y = element_text(size = 14, colour = "black",
+           axis.text.x = element_text(size = 12, colour = "black", 
+                                     angle = 90, vjust = 0.4),
+           axis.text.y = element_text(size = 12, colour = "black"),
+           legend.text = element_text(size = 12, colour = "black"),
+           axis.title.y = element_text(size = 12, colour = "black",
                                        margin = unit(c(0, 5, 0, 0), "mm")),
-           axis.title.x = element_text(size = 14, colour = "black",
+           axis.title.x = element_text(size = 12, colour = "black",
                                        margin = unit(c(5, 0, 0, 0), "mm")),
            axis.line.x = element_blank(), 
            axis.line.y = element_blank(), 
-           axis.ticks = element_blank()) +
-     scale_fill_manual(values = cbPalette) 
-covid_incidence
+           axis.ticks = element_blank()) 
 
-#ggsave("county_incidence_age.jpg", width = 8, height = 6)
+covid_plot_r
+
+#ggsave("covid_plot_r.jpg", width = 10, height = 5)
 ```
 
 \pagebreak  
 
 ```{r, fig.width = 10, fig.height = 5}
-# Epi curve - date of onset
-
 total_cases <- sum(covid_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
 date_12 <- format(Sys.Date() - 12, "%d %b %Y")
@@ -269,8 +430,6 @@ covid_plot_onset
 \pagebreak  
 
 ```{r, fig.width = 10, fig.height = 5}
-# Epi curve - test date
-
 total_cases <- sum(covid_data$case)
 date_today <- format(Sys.Date(), "%d %b %Y")
 date_12 <- format(Sys.Date() - 12, "%d %b %Y")
@@ -465,8 +624,6 @@ covid_piechart <- plot_table %>%
            legend.title = element_text(size = 16, colour = "black")) +
            scale_fill_manual(values = cbPalette)
 covid_piechart
-
-#ggsave("piechart_comm_spread.jpg", width = 10, height = 5)
 ```
 
 \pagebreak  
@@ -624,3 +781,125 @@ piechart_function(plot_fill = "number_contacts_categorical", var_label = "Number
 ```
 
 
+
+
+```{r, fig.width = 10, fig.height = 6, include=FALSE}
+# Older plots - saving for future reference
+
+covid_plot_onset <- covid_data %>% 
+   ggplot() +
+     geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
+               fill = "gray80", alpha = 0.05) +
+     geom_label(aes(x = Sys.Date()-9, y = 4.5, 
+                    label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
+     geom_col(aes(symptom_onset_date_new, case, fill = age_group)) +
+     labs(title = "COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020",
+          subtitle = paste0("Total cases = ", total_cases),
+          fill = " ") +
+     ylab("Number of Cases") +
+     xlab("Symptom Onset Date") +
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "2 days"),
+                  labels = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "2 days"),
+                  date_labels = "%d-%b") +
+     theme_minimal() +
+     theme(strip.text = element_text(size = 16, colour = "black"),
+           title = element_text(size = 12, colour = "black"),
+           panel.grid = element_blank(),
+           panel.grid.major.y = element_line(colour = "gray75"),
+           axis.text.x = element_text(size = 12, colour = "black", 
+                                     angle = 90, vjust = 0.4),
+           axis.text.y = element_text(size = 12, colour = "black"),
+           axis.title.y = element_text(size = 12, colour = "black",
+                                       margin = unit(c(0, 5, 0, 0), "mm")),
+           axis.title.x = element_text(size = 12, colour = "black",
+                                       margin = unit(c(5, 0, 0, 0), "mm")),
+           legend.text = element_text(size = 12, colour = "black"),
+           axis.line.x = element_blank(), 
+           axis.line.y = element_blank(), 
+           axis.ticks = element_blank())  +
+     scale_fill_manual(values = cbPalette) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-03-16")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-03-16"), label = "Schools close", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-03-28")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-03-28"), label = "Shelter in place order", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-04-26")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-04-26"), label = "Phase 1 start", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-06-01")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-06-01"), label = "Phase 2 start", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14))
+
+covid_plot_onset
+
+#ggsave("epi_curve_age.jpg", width = 10, height = 5)
+```
+
+```{r, fig.width = 10, fig.height = 6, include=FALSE}
+covid_plot_onset <- covid_data %>% 
+   ggplot() +
+     geom_rect(aes(xmin = Sys.Date() - 12, xmax = Sys.Date(), ymin=0, ymax=Inf),
+               fill = "gray80", alpha = 0.05) +
+     geom_label(aes(x = Sys.Date()-8, y = 4.5, 
+                    label = "Cases with symptom onset \n during the shaded dates may \n not yet be reflected in the graph.")) +
+     geom_col(aes(symptom_onset_date_new, case, fill = gender)) +
+     labs(title = "COVID-19 Cases in Missoula County by Date of Symptom Onset, 2020",
+          subtitle = paste0("Total cases = ", total_cases),
+          fill = " ") +
+     ylab("Number of Cases") +
+     xlab("Symptom Onset Date") +
+     scale_x_date(breaks = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "2 days"),
+                  labels = seq.Date(from = as.Date("2020-03-06"), 
+                                    to = as.Date(Sys.Date()), 
+                                    by = "2 days"),
+                  date_labels = "%d-%b") +
+     theme_minimal() +
+     theme(strip.text = element_text(size = 16, colour = "black"),
+           title = element_text(size = 12, colour = "black"),
+           panel.grid = element_blank(),
+           panel.grid.major.y = element_line(colour = "gray75"),
+           axis.text.x = element_text(size = 12, colour = "black", 
+                                     angle = 90, vjust = 0.4),
+           axis.text.y = element_text(size = 12, colour = "black"),
+           axis.title.y = element_text(size = 12, colour = "black",
+                                       margin = unit(c(0, 5, 0, 0), "mm")),
+           axis.title.x = element_text(size = 12, colour = "black",
+                                       margin = unit(c(5, 0, 0, 0), "mm")),
+           legend.text = element_text(size = 12, colour = "black"),
+           legend.position = "top",
+           axis.line.x = element_blank(), 
+           axis.line.y = element_blank(), 
+           axis.ticks = element_blank())  +
+     scale_fill_manual(values = cbPalette) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-03-16")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-03-16"), label = "Schools close", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-03-28")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-03-28"), label = "Shelter in place order", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-04-26")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-04-26"), label = "Phase 1 start", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14)) +
+     geom_vline(xintercept = as.numeric(as.Date("2020-06-01")), color = "black", 
+              size = 1, linetype = "dashed") +
+     geom_text(aes(x = as.Date("2020-06-01"), label = "Phase 2 start", vjust = -0.5,
+                 y = 3.5), colour = "black", angle = 90, text = element_text(size=14))
+
+covid_plot_onset
+
+#ggsave("epi_curve_gender.jpg", width = 10, height = 5)
+```
